tests/errors/matrix_matmul_06.f90
program matrix_matmul_01
    implicit none
    integer :: a(3)
    integer :: b(3)
    print *, matmul(a, b)
end program
